# FRCScout

./: README.md  Trisonics_Scouting_Data_2023_jjb.ipynb  staticwebapp.config.json
.github/workflows/: azure-static-web-apps-lively-coast-04b0a3b0f.yml  release_trisonics-scouting-api.yml
data-notebooks/: SampleScoutData.ipynb
data-streamlit/: .gitignore  2023micmp4.json  BEGINNING_DATA.md  README.md  UPGRADE_NOTES.md  config.json  kmeans.ipynb  pyproject.toml  requirements.txt  scout.py  scratch.ipynb  test.py  variance.ipynb
data-streamlit/pages/: app_status.py  clusters.py  explore.py  match_breakdowns.py  pca.py  picklist.py  scout_match.py  team_detail.py  what_if.py
trisonics-api/: .gitignore  README.md  full_app.py  function_app.py  local.settings.json  requirements.txt
trisonics-scouting/: .browserslistrc  angular.json  package-lock.json  package.json  tsconfig.json
trisonics-scouting-ng17/: README.md  angular.json  package-lock.json  package.json
trisonics-scouting-ng17/src/: index.html  manifest.webmanifest
trisonics-scouting-ng17/src/app/: app.component.html  app.component.ts  app.module.ts
trisonics-scouting/src/: index.html  manifest.webmanifest  styles.scss
trisonics-scouting/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
trisonics-scouting/src/app/services/: scouting-data.service.ts  user-data.service.ts
trisonics-scouting/src/environments/: environment.prod.ts  environment.ts
video-scout/: README.md  requirements.txt  watchvid.py
(+37 files in other folders)
