[project]
name = "frc-scout"
version = "0.1.0"
description = "Trisonics FRC Scouting Data Dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.42.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "altair>=5.4.0",
    "requests>=2.32.0",
    "python-decouple>=3.8",
    "extra-streamlit-components>=0.1.0",
]

[project.scripts]
scout = "scout:main"

[tool.uv]
dev-dependencies = []
